--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -95,8 +95,9 @@ Those who are in critical condition are in ICU.
 
 These are the deaths, critical condition (ICU), cases in hospital, cases well but still test positive, recovered:
 
-- 2020-04-02: 4, 23, 464, 315, 266
-- 2020-04-03: 5, 25, 473, 354, 282
+```r
+knitr::kable(read.csv("cases.csv"), "markdown")
+```
 
 Note: Data was only captured from 2 Apr 2020 onwards, refer to "sources.txt" for links.
 
