--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -78,7 +78,7 @@ Notes about data:
 3. `days.to.recover.resources` = recovered - confirmed
 4. `hospital` is the hospital warded (may have been transferred from another hospital).
 5. `links.to` are linked cases which are not family; `links.to.family` are linked cases which are family
-6. No more detailed annexes from 5 Apr 2020 onwards
+6. No more detailed annexes from 5 Apr 2020 onwards, only cluster links and release dates updated.
 
 
 ### Summary stats
@@ -201,10 +201,10 @@ This records the key measures the Singapore government has taken.
 - 2020-03-11: senior activities suspended, till 24 March - was later extended on 25 Mar [source](http://go.gov.sg/PAseniors).
 - 2020-03-10: Port call by Costa Fortuna [source](http://go.gov.sg/mpa9mar).
 - 2020-03-07: foreigners to bear cost of covid treatment [source](https://www.channelnewsasia.com/news/singapore/foreigners-to-bear-costs-of-covid-19-treatment-in-singapore-12519500).
-- 2020-03-04: work pass holders allowed to return, be swabbed with 5-6 hours turnaround for test results [source](http://go.gov.sg/mom3mar).
-- 2020-02-28: schools with extra precaution [source](http://go.gov.sg/covid19-MOE).
+- 2020-03-04: work pass holders allowed to return, be tested [source](http://go.gov.sg/mom3mar).
+- 2020-02-28: schools with extra precaution [source](http://go.gov.sg/covid19-MOE). 5-6 hours turnaround for test results [
 - 2020-02-23: start of travel advisories to outbreak countries other than China (e.g. Daegu, Korea)[source](http://go.gov.sg/mom-27feb).
-- 2020-02-19: introduction of Stay Home Notice [source](http://go.gov.sg/StayHomeNotice).
+- 2020-02-17: introduction of Stay Home Notice [source](http://go.gov.sg/StayHomeNotice).
 - 2020-02-07: some community spread in Singapore, DORSCON orange. Business continuity plans kick in and temp. screening [source](http://go.gov.sg/dorscon7feb).
 
 Source: https://www.moh.gov.sg/news-highlights/
