[EJYS] Modify table

--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -91,8 +91,9 @@ Those who are in critical condition are in ICU.
 
 These are the deaths, critical condition (ICU), cases in hospital, cases well but still test positive, recovered, new cases (imported), new cases (local), total cases:
 
+Here's a preview of the dataset (first 10 rows):
 ```{r}
-knitr::kable(read.csv("cases.csv"), "markdown")
+knitr::kable(read.csv("cases.csv")[1:10], "markdown")
 ```
 
 Note: Data was only captured from 2 Apr 2020 onwards, refer to "sources.txt" for links.
