--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -19,7 +19,6 @@ library(ggplot2)
 library(tidyr)
 library(data.table)
 library(gridExtra)
-library(wordcloud2)
 source('main.r')
 source('util.r')
 
@@ -66,77 +65,36 @@ style = "display: inline-block;vertical-align:top;padding-right: 20px"
 bootstrapPage(
   div(style=style, dateRangeInput("range_date", "Date range", 
                                   start = min_date, end = max_date,
-                                  min = min_date, max = max_date)),
-  div(style=style, numericInput("binwidth_date", "Days bin width", value = 1, min=1, max=14)))
+                                  min = min_date, max = max_date)))
 
-renderPlot({
-    # input = list(range_date = c(as.Date(min_date), as.Date(max_date)), binwidth=1) # test
-    min_date = input$range_date[1]
-    max_date = input$range_date[2]
-    data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
-
-    ggplot(data=data, aes(x=confirmed.at.date)) +
-      geom_histogram(stat="bin", binwidth=input$binwidth_date, fill="steelblue") + 
-      xlab("") + ylab("") + 
-      geom_vline(xintercept=date_second_wave, size=1, col="red") +
-      annotate("text", x=date_second_wave+7, y=100, label= "Second wave") + 
-      scale_x_date(date_breaks = "weeks", date_labels = "%Y EW %U") +
-      theme
-
-}, height=280)
-
+cbp1 = c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
 renderPlot({
 
     min_date = input$range_date[1]
     max_date = input$range_date[2]
     data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
+    data = df[,list(N=.N),by=c("confirmed.at.date", "infection.source")]
 
-    type_label = c("Imported case", "Local transmission")
-    names(type_label) = c("Imported", "Local")
-
-    ggplot(data=data, aes(x=confirmed.at.date, fill=infection.source)) +
-      geom_histogram(stat="bin", binwidth=input$binwidth_date) + 
-      facet_wrap(~ infection.source, ncol=1, labeller = camelcase_labeller) + 
+    ggplot(data=data, aes(x=confirmed.at.date, y=N, fill=infection.source)) +
+      geom_bar(position='stack', stat="identity") + 
       geom_vline(xintercept=date_second_wave, size=1, col="red") +
-      annotate("text", x=date_second_wave+7, y=100, label= "Second wave") + 
-      scale_fill_discrete(name="Case type", breaks=type_label, labels=names(type_label)) + 
+      annotate("text", x=date_second_wave+5, y=100, label= "Second wave") + 
+      scale_fill_discrete(name="Case type") + 
       xlab("") + ylab("Number of confirmed cases detected\n") +
-      scale_x_date(date_breaks = "weeks", date_labels = "%Y EW %U") +
-      guides(fill=F) +
-      theme
+      scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
+      scale_fill_manual(name="Type", 
+                         labels=c("Imported case", "Local transmission", "Unknown"),
+                         values=c(cbp1[c(6, 3, 1)])) + 
+      theme +
+      theme(legend.position="bottom", legend.box = "horizontal", 
+            axis.text.x=element_text(angle = 90))
 
 })
-
-renderPlot({
-    min_date = input$range_date[1]
-    max_date = input$range_date[2]
-    data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
-    data = data[data$infection.source == "Local transmission",]
-    data$clustered = ifelse(data$cluster == "", "Not in cluster", "Cluster case")
-    cluster = data[data$clustered=="Cluster case",]
-    cluster = data[!duplicated(data$cluster),]
-
-    p1 = ggplot(data=cluster, aes(x=confirmed.at.date)) +
-      geom_histogram(stat="bin", binwidth=input$binwidth_date) + 
-      xlab("") + ylab("Number of clusters detected\n") +
-      scale_x_date(date_breaks = "weeks", date_labels = "%Y EW %U") +
-      theme
-
-      p2 = ggplot(data=data[data$cluster=="",], aes(x=confirmed.at.date)) +
-      geom_histogram(stat="bin", binwidth=input$binwidth_date) + 
-      xlab("") + ylab("Number of locally-transmitted \nunlinked cases\n") +
-      scale_x_date(date_breaks = "weeks", date_labels = "%Y EW %U") +
-      theme
-
-      grid.arrange(p1, p2)
-})
-
 ```
 
 #### Two waves
 
-From here, we can see that there are two waves of imported cases, the first from EW 03 to EW 07 and second from EW 08 onwards. These are associated with the Chinese cases mainly and when there was a global spread subsequently with Europe and other countries as the epicenter. 
-
+There are two waves of imported cases, the first from EW 03 to EW 07 and second from EW 08 onwards. These are associated with the Chinese cases mainly and when there was a global spread subsequently with Europe and other countries as the epicenter. 
 
 ```{r fig.height=6, fig.width=9}
 data_1st_wave = df[df$confirmed.at.date < date_second_wave & df$infection.source == "Imported case",]
@@ -161,6 +119,41 @@ grid.arrange(
 )
 
 ```
+
+#### Clusters and unlinked cases through time
+
+Across time, there were more clusters forming, as well as unlinked cases.
+
+```{r}
+
+renderPlot({
+    min_date = input$range_date[1]
+    max_date = input$range_date[2]
+    data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
+    data = data[data$infection.source == "Local transmission",]
+    data$clustered = ifelse(data$cluster == "", "Not in cluster", "Cluster case")
+    cluster = data[data$clustered=="Cluster case",]
+    cluster = data[!duplicated(data$cluster),]
+
+    p1 = ggplot(data=cluster, aes(x=confirmed.at.date)) +
+      geom_histogram(stat="bin", binwidth=1, fill=cbp1[1]) + 
+      xlab("") + ylab("Number of clusters detected\n") +
+      scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
+      theme +
+      theme(axis.text.x=element_text(angle = 90))
+
+    p2 = ggplot(data=data[data$cluster=="",], aes(x=confirmed.at.date)) +
+      geom_histogram(stat="bin", binwidth=1, fill=cbp1[1]) + 
+      xlab("") + ylab("Number of local unlinked cases\n") +
+      scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
+      theme +
+      theme(axis.text.x=element_text(angle = 90))
+
+    grid.arrange(p1, p2)
+})
+
+```
+
 
 #### Key events
 
