--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -19,6 +19,8 @@ library(ggplot2)
 library(tidyr)
 library(data.table)
 library(gridExtra)
+library(ggrepel)
+library(wordcloud2)
 source('main.r')
 source('util.r')
 
@@ -38,6 +40,7 @@ url2 = "https://www.againstcovid19.com/singapore/cases/search"
 
 df = get_alternative_data()
 df_cases_day = get_df_cases_day()
+events = get_events()
 ```
 
 ```{r}
@@ -58,7 +61,8 @@ max_date = max(df$confirmed.at.date, na.rm=T)
 date_second_wave = as.Date("2020-02-25")
 ```
 
-The first case detected in Singapore on `r format(min_date, "%d %B %Y")`. 
+The first case detected in Singapore on `r format(min_date, "%d %B %Y")`. Key measures and events are marked below.
+
 
 ```{r}
 style = "display: inline-block;vertical-align:top;padding-right: 20px"
@@ -69,32 +73,74 @@ bootstrapPage(
 
 cbp1 = c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
 renderPlot({
+  
+  min_date = input$range_date[1]
+  max_date = input$range_date[2]
+  data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
+  data = df[,list(N=.N),by=c("confirmed.at.date", "infection.source")]
 
-    min_date = input$range_date[1]
-    max_date = input$range_date[2]
-    data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
-    data = df[,list(N=.N),by=c("confirmed.at.date", "infection.source")]
+  labels = events[]
+  labels$xend = labels$date
+  labels$yend = data[confirmed.at.date %in% labels$x, list(sum=sum(N)), by="confirmed.at.date"]$sum
+  labels$x = labels$xend - 5
+  labels$y = labels$yend + sample(2:6, size=length(labels$yend), replace=T)*50
+  labels$infection.source = "Local transmission"
 
-    ggplot(data=data, aes(x=confirmed.at.date, y=N, fill=infection.source)) +
-      geom_bar(position='stack', stat="identity") + 
-      geom_vline(xintercept=date_second_wave, size=1, col="red") +
-      annotate("text", x=date_second_wave+5, y=100, label= "Second wave") + 
-      scale_fill_discrete(name="Case type") + 
-      xlab("") + ylab("Number of confirmed cases detected\n") +
-      scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
-      scale_fill_manual(name="Type", 
-                         labels=c("Imported case", "Local transmission", "Unknown"),
-                         values=c(cbp1[c(6, 3, 1)])) + 
-      theme +
-      theme(legend.position="bottom", legend.box = "horizontal", 
-            axis.text.x=element_text(angle = 90))
+  data = merge(data, labels, by.x=c("confirmed.at.date", "infection.source"), 
+               by.y=c("date", "infection.source"), all.x=T, all.y=T)
+
+  plt = ggplot(data=data, aes(x=confirmed.at.date, y=N, fill=infection.source, label=short)) +
+    geom_bar(position='stack', stat="identity") + 
+    geom_vline(xintercept=date_second_wave, size=1, col="red") +
+    xlab("") + ylab("Number of cases detected\n") +
+    scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
+    scale_fill_manual(name="", 
+                        labels=c("Imported case", "Local transmission", "Unknown"),
+                        values=c(cbp1[c(6, 3, 1)])) + 
+    theme +
+    theme(legend.position="bottom", legend.box = "horizontal", 
+          axis.text.x=element_text(angle = 90))
+  
+  plt = plt + geom_label_repel(nudge_y=100, angle=0, vjust=0, force=5,
+                               fontface='bold', color='black', size=3, 
+                               segment.size=0.5, segment.color='black', 
+                               box.padding = unit(0.25, 'lines'), fill='grey97',
+                               arrow = arrow(length = unit(1, "mm")),
+                               point.padding = 0)
+  
+  plt
+
 
 })
 ```
 
+```{r}
+# **Events**
+# show_events = events[grepl("event", type)][,c("date", "short")]
+# names(show_events) = c("Date", "Event")
+# knitr::kable(show_events, "markdown")
+```
+
+```{r}
+show_measures = events[grepl("measure", type)]
+show_measures = data.table(unnest(show_measures, related=strsplit(related, ",")))
+show_measures$related = as.numeric(show_measures$related)
+show_measures$event = paste0(show_measures$short, " (", format(show_measures$date, "%d %b"), ")")
+show_measures =  show_measures[, list(Measures=paste0(event, collapse = ", ")), by="related"][
+  order(as.numeric(related))]
+names(show_measures) = c("Category", "Measures")
+show_measures[,1] = c(
+  "1. Quarantine and isolation events/measures.", 
+  "2. Border control events/measures to decrease imported cases.",  
+  "3. Social distancing measures to reduce number of contacts per day.",  
+  "4. Good hygiene measures to reduce transmission probability of virus."
+)
+knitr::kable(show_measures, "markdown")
+```
+
 #### Two waves
 
-There are two waves of imported cases, the first from EW 03 to EW 07 and second from EW 08 onwards. These are associated with the Chinese cases mainly and when there was a global spread subsequently with Europe and other countries as the epicenter. 
+There are two waves of imported cases, the first from EW 03 to EW 07 and second from EW 08 onwards. These are associated with the Chinese cases mainly and when there was a global spread subsequently with Europe and other countries as the epicenter.
 
 ```{r fig.height=6, fig.width=9}
 data_1st_wave = df[df$confirmed.at.date < date_second_wave & df$infection.source == "Imported case",]
@@ -108,15 +154,18 @@ data_2nd_wave = data_2nd_wave[country.of.origin != "Unclear origin"]
 
 grid.arrange(
   ggplot(data_1st_wave, aes(x=reorder(camelcase_labeller("", country.of.origin), -N), y=N)) +
-  geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
-  xlab("") + ylab("") + ggtitle("First wave") +
-  theme(axis.text.x=element_text(size=rel(0.5), angle=90)),
+    geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
+    xlab("") + ylab("") + ggtitle("First wave") +
+    theme(axis.text.x=element_text(size=rel(0.5), angle=90)),
   
   ggplot(data_2nd_wave, aes(x=reorder(camelcase_labeller("", country.of.origin), -N), y=N)) +
-  geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
-  xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave") +
-  theme(axis.text.y=element_text(size=rel(0.7)))
+    geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
+    xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave") +
+    theme(axis.text.y=element_text(size=rel(0.7)))
 )
+
+renderWordcloud2({wordcloud2(data=data_2nd_wave, size=3, 
+                             color=rep_len(cbp1[c(6, 3, 1)], nrow(data_2nd_wave)))}) # bug
 
 ```
 
@@ -137,7 +186,7 @@ renderPlot({
 
     p1 = ggplot(data=cluster, aes(x=confirmed.at.date)) +
       geom_histogram(stat="bin", binwidth=1, fill=cbp1[1]) + 
-      xlab("") + ylab("Number of clusters detected\n") +
+      xlab("") + ylab("Number of clusters\n") +
       scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
       theme +
       theme(axis.text.x=element_text(angle = 90))
@@ -153,23 +202,6 @@ renderPlot({
 })
 
 ```
-
-
-#### Key events
-
-```{r}
-events_cols = c("date", "short", "type", "related")
-events = fread("events.csv")[, ..events_cols]
-names(events) = c("Date", "Event", "Type", "Measure related to")
-knitr::kable(events, "markdown")
-```
-
-The `Measure related to` refers to:
-
-1. Quarantine and isolation events/measures.
-2. Border control events/measures to decrease imported cases.
-3. Social distancing measures to reduce number of contacts per day.
-4. Good hygiene measures to reduce transmission probability of virus.
 
 ### Case load
 
